// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainMenuSearch should be rendered correctly 1`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable searchInput"
    tabindex="-1"
  >
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
    <input
      class="uui-input"
      tabindex="0"
      type="text"
      value=""
    />
  </div>
</DocumentFragment>
`;

exports[`MainMenuSearch should be rendered correctly 2`] = `
<DocumentFragment>
  <div
    class="container uui-input-box -clickable searchInput"
    tabindex="-1"
  >
    <div
      class="container uui-icon uui-enabled"
    >
      <svg
        class=""
      />
    </div>
    <input
      class="uui-input"
      tabindex="0"
      type="primary"
      value="test"
    />
  </div>
</DocumentFragment>
`;
